--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -1,7 +1,4 @@
-{{currentQuestions|json}}
-
-
-
+<!-- {{currentQuestions|json}} -->
 <div class="bootstrap-wrapper">
     <!-- Loading Spinner -->
     <div *ngIf="isLoading" class="loading-overlay">
