--- a/src/app/pages/admin/welcome/welcome.component.html
+++ b/src/app/pages/admin/welcome/welcome.component.html
@@ -326,9 +326,13 @@
 
       </div>
 
+    </mat-card>
+  </div>
+</div>
 
 
-      <!-- {{reportsData | json}} -->
 
-      <!-- {{chartDataPoints | json}} -->
-      <!-- {{allUsers | json}} -->
+<!-- {{reportsData | json}} -->
+
+<!-- {{chartDataPoints | json}} -->
+<!-- {{allUsers | json}} -->
