--- a/src/app/pages/admin/adminnavbar/adminnavbar.component.css
+++ b/src/app/pages/admin/adminnavbar/adminnavbar.component.css
@@ -46,6 +46,47 @@ body {
   margin-right: auto;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .brand-icon {
   margin-right: 8px;
   font-size: 28px;
@@ -118,7 +159,23 @@ body {
   margin-top: 15px;
 }
 
+
+
+.fixed-nav {  /*PROBLEMATIC CLASS*/
+  position: fixed;
+  top: 5px; /* Height of the toolbar */
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  overflow-y: auto;
+}
+
 .side-nav {
+   top: 63px; /* Height of the toolbar */
+  /* bottom: 0; */
+  /* left: 0; */
+  position: fixed;
+  float: inline-end;
   width: 240px;
   background-color: white;
   box-shadow: 2px 0 5px rgba(0,0,0,0.1);
@@ -150,6 +207,15 @@ body {
   cursor: pointer;
   transition: background-color 0.3s;
 }
+
+
+
+
+
+
+
+
+
 
 .nav-item:hover {
   background-color: rgba(0,0,0,0.04);
@@ -239,6 +305,9 @@ body {
   }
 }
 
+
+
+
 @media (max-width: 600px) {
   .toolbar-content {
     padding: 0 8px;
@@ -298,6 +367,138 @@ body {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Add these styles to your existing CSS */
 
 .dashboard-container {
@@ -313,20 +514,93 @@ body {
   overflow: hidden;
 }
 
+
+
+
+
+
 .fixed-header {
   position: sticky;
   top: 0;
   z-index: 2;
 }
 
-.fixed-nav {
-  position: fixed;
-  top: 64px; /* Height of the toolbar */
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-  overflow-y: auto;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .scrollable-content {
   margin-left: 240px; /* Same as drawer width */
@@ -337,8 +611,14 @@ body {
   box-sizing: border-box;
 }
 
+
+
+
+
+
+
 /* Adjust for mobile view */
-@media (max-width: 959px) {
+/* @media (max-width: 959px) {
   .fixed-nav {
     transform: translateX(-100%);
     transition: transform 0.3s ease;
@@ -352,7 +632,121 @@ body {
     margin-left: 0;
     width: 100%;
   }
-}
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Adjust for small screens */
 @media (max-width: 599px) {
