committing Scores as decimals

--- a/src/app/pages/user/print-quiz/print-quiz.component.html
+++ b/src/app/pages/user/print-quiz/print-quiz.component.html
@@ -162,7 +162,9 @@
                                             </p>
 
                                             <p class="question-answer">
-                                                <strong>Your Answer:</strong> {{ items.studentAnswer }}
+                                                <!-- <strong>Your Answer:</strong> {{ items.studentAnswer }} -->
+                                                <strong>Your Answer:</strong> {{ items.studentAnswer || 'No answer provided' }}
+
                                             </p>
 
                                             <p class="question-score">
