committing Scores as decimals

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
 
   <header @fadeIn *ngIf="!isloggedIn">
     <mat-toolbar color="primary" class="mat-elevation-z8">
-      <span>ACT LTD</span>
+      <span>OTC LTD</span>
       <span class="example-spacer"></span>
       <!-- <a mat-button routerLink="/">Home</a> -->
     
